--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,27 @@
-hello
+name: Push Go image
+
+on:
+  workflow_dispatch:
+    inputs:
+      tags:
+        description: Boolean button
+        required: false
+        type: boolean
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup docker buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: lyovtigranyan619/go_image:latest
