--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: lyovtigranyan619/go_image:latest
+          tags: lyovtigranyan619/go_image:1.0
           build-args: |
             VERSION=1.16
