--- a/.github/workflows/tmp.yaml
+++ b/.github/workflows/tmp.yaml
@@ -4,8 +4,12 @@ on:
   workflow_dispatch
 
 jobs:
+  example_matrix:
+    strategy:
+      matrix:
+        os: [ubuntu-20.04,ubuntu-21.04,ubuntu-22.04,]
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os}}
     steps:
       - name: Create s directory
         run: mkdir my_dir
