--- a/.github/workflows/tmp.yaml
+++ b/.github/workflows/tmp.yaml
@@ -1,4 +1,4 @@
-name: Print Hello World
+name: Print Hello World With 3 OS
 
 on:
   workflow_dispatch
@@ -11,11 +11,11 @@ jobs:
   build:
     runs-on: ${{ matrix.os}}
     steps:
-      - name: Create s directory
-        run: mkdir my_dir
-      - name: Create a file
-        run: touch my_dir/t.txt
-      - name: Write something in the file
-        run: echo "Hello world" > my_dir/t.txt
-      - name: Check the content
-        run: cat my_dir/t.txt
+    - name: Create s directory
+      run: mkdir my_dir2
+    - name: Create a file
+      run: touch my_dir/t2.txt
+    - name: Write something in the file
+      run: echo "Hello world" > my_dir2/t2.txt
+    - name: Check the content
+      run: cat my_dir2/t2.txt
