--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,12 @@ on:
         type: boolean
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  example_matrix:
+      strategy:
+        matrix:
+          version: [1.17, 1.18, 1.19]
+          os: [ubuntu-20.04, ubuntu-22.04]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Setup docker buildx
         uses: docker/setup-buildx-action@v2
@@ -24,6 +28,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: lyovtigranyan619/go_image:1.0
+          tags: lyovtigranyan619/go_image:${{ matrix.version }}
           build-args: |
-            VERSION=1.16
+            VERSION=${{ matrix.version }}
